[gd_scene load_steps=6 format=3 uid="uid://5o00n7k3w2xb"]

[ext_resource type="PackedScene" uid="uid://bxoakt32optig" path="res://resources/prefabs/player/player.tscn" id="1_hl405"]
[ext_resource type="PackedScene" uid="uid://da63d4xi31igy" path="res://resources/inventory/ui/hotbar/hot_bar.tscn" id="2_75pr4"]
[ext_resource type="PackedScene" uid="uid://b8fovaesjaw4s" path="res://resources/inventory/ui/main_chest_inventory/main_chest_inventory.tscn" id="2_n5sux"]
[ext_resource type="Resource" uid="uid://r7tnra80pigx" path="res://resources/prefabs/player/inventory.tres" id="3_w2ujp"]
[ext_resource type="Script" path="res://resources/inventory/ui/item_mover/ItemMover.gd" id="5_rnmof"]

[node name="InventoryExample" type="Node"]

[node name="CharacterBody2D" parent="." instance=ExtResource("1_hl405")]
position = Vector2(119, 110)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainChestInventory" parent="CanvasLayer" instance=ExtResource("2_n5sux")]

[node name="HotBar" parent="CanvasLayer" instance=ExtResource("2_75pr4")]
modulate = Color(1, 1, 1, 0.921569)
offset_left = 303.0
offset_top = 418.0
offset_right = -657.0
offset_bottom = -122.0
inventory = ExtResource("3_w2ujp")

[node name="ItemMover" type="Control" parent="CanvasLayer" node_paths=PackedStringArray("main_chest_inventory_ui", "hot_bar")]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_rnmof")
main_chest_inventory_ui = NodePath("../MainChestInventory")
hot_bar = NodePath("../HotBar")

[connection signal="select_double_clicked" from="CanvasLayer/MainChestInventory" to="CanvasLayer/ItemMover" method="_on_main_chest_inventory_select_double_clicked"]
[connection signal="current_slot_changed" from="CanvasLayer/HotBar" to="CharacterBody2D" method="_on_hot_bar_current_slot_changed"]
[connection signal="select_double_clicked" from="CanvasLayer/HotBar" to="CanvasLayer/ItemMover" method="_on_hot_bar_select_double_clicked"]
